<resources>
    <string name="app_name">Contacts</string>
    <string name="page_title">Contacts</string>
    <string name="new_contact">NEW CONTACT</string>
    <string name="new_group">NEW GROUP</string>
    <string name="group_contact_fab_desc">Edit contacts in group</string>
    <string name="edit_group_fab_desc">Save changes</string>
    <string name="new_tag">NEW TAG</string>
    <string name="tag_fab_search_desc">Search selected tag</string>
    <string name="tag_fab_delete_desc">Delete selected tag</string>
    <string name="new_contact_page_title">New Contact</string>
    <string name="search">search</string>
    <string name="content_description_search">Content description search</string>
    <string name="more">more</string>
    <string name="content_description_more">content description more</string>
    <string name="content_description_edit">content description edit</string>
    <string name="content_description_delete">content description delete</string>
    <string name="All">ALL</string>
    <string name="Groups">GROUPS</string>
    <string name="Tabs">TABS</string>
    <string name="name_label">Name</string>
    <string name="contact_info_label">Contact Information</string>
    <string name="description_label">Description</string>
    <string name="tag_label">Tags</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Surname</string>
    <string name="business_name_hint">Business name</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="description_hint">Enter description</string>
    <string name="save">Save changes</string>
    <string name="confirm_leave_title">Confirm leave</string>
    <string name="confirm_leave_txt">Changes won\'t be saved, still leave?</string>
    <string name="new_group_name">Please enter the new group name</string>
    <string name="new_tag_name">Please enter the new tag name</string>
    <string name="confirm_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="confirm_delete_group">Are you sure you want to delete this group?</string>
    <string name="confirm_delete_tags">"Are you sure you want to delete the selected tags?"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">menu</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="delete">delete_button</string>
    <string name="edit">edit_button</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="contact_information">Contact Information</string>
    <string name="email_label">Email</string>
    <string name="meeting_information">Meeting Information</string>
    <string name="test_string_large">I\'m a Barbie girl, in the Barbie world\nLife in plastic, it\'s fantastic\nYou can brush my hair, undress me everywhere\nImagination, life is your creation</string>
    <string name="edit_group_members">Edit Group Members</string>
    <string name="change_group_name">Change Group Name</string>
    <string name="delete_group">Delete Group</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="results">Results</string>
    <string name="tags_label">Tags</string>
    <string name="search_hint">Search Contacts…</string>
    <string name="group_name">Group Name</string>
    <string name="mobile_label">Mobile</string>
    <string name="no_tags_label">Contact doesn\'t have any tags yet!\ </string>
    <string name="no_description_label">Contact doesn\'t have a description yet!\ </string>
    <string name="position_hint">Job title</string>
    <string name="user_no_tags_label">You haven\'t created any tags yet!\ </string>
</resources>