<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="Search"
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
<<<<<<< Updated upstream:app/src/main/res/menu/menu.xml
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
=======
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="ifRoom" />
>>>>>>> Stashed changes:app/src/main/res/menu/home_menu.xml
</menu>